Replace raw foreign key value in owners with primary descriptors

--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -16,7 +16,7 @@
 
       <% @owners.each do |owner| %>
       <tr>
-        <td><%= owner.vessels_id %></td>
+        <td><%= owner.vessels.name %></td>
         <td><%= owner.member_id %></td>
         <td>
           <a href="/owners/<%= owner.id %>" class="btn btn-primary">Show</a>
