Replace foreign key text inputs in owners with dropdowns

--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -33,7 +33,7 @@
           Member
         </label>
 
-        <input type="text" id="member_id" name="member_id" placeholder="Member" class="form-control" value="<%= @owner.member_id %>">
+        <%= select_tag(:member_id, options_from_collection_for_select(Member.all, :id, :email, @owner.member_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-success">
