Replace raw foreign key value in members with primary descriptors

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= member.email %></td>
         <td><%= member.password %></td>
         <td><%= member.name %></td>
-        <td><%= member.family_id %></td>
+        <td><%= member.family.last_name %></td>
         <td>
           <a href="/members/<%= member.id %>" class="btn btn-primary">Show</a>
         </td>
