--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -23,3 +23,34 @@
     </div>
   </div>
 </div>
+
+<!-- A Family has many members -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Members
+      </li>
+
+      <% @family.members.each do |member| %>
+        <li class="list-group-item">
+          <a href="/members/<%= member.id %>">
+            <%= member.email %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/members/<%= member.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/members/<%= member.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_member/<%= member.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
