--- a/app/views/vessels/show.html.erb
+++ b/app/views/vessels/show.html.erb
@@ -44,3 +44,65 @@
     </div>
   </div>
 </div>
+
+<!-- A Vessel has many owners -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Owners
+      </li>
+
+      <% @vessel.owners.each do |owner| %>
+        <li class="list-group-item">
+          <a href="/owners/<%= owner.id %>">
+            <%= owner.vessels_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/owners/<%= owner.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/owners/<%= owner.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_owner/<%= owner.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A Vessel has many members -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Members
+      </li>
+
+      <% @vessel.members.each do |member| %>
+        <li class="list-group-item">
+          <a href="/members/<%= member.id %>">
+            <%= member.email %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/members/<%= member.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/members/<%= member.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_member/<%= member.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
