Only owner user can modify owner

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -45,12 +45,14 @@
             <a href="/owners/<%= owner.id %>" class="btn btn-primary">
               <i class="fa fa-search-plus"></i>
             </a>
-            <a href="/owners/<%= owner.id %>/edit" class="btn btn-warning">
-              <i class="fa fa-edit"></i>
-            </a>
-            <a href="/delete_owner/<%= owner.id %>" class="btn btn-danger" rel="nofollow">
-              <i class="fa fa-trash-o"></i>
-            </a>
+            <%if current_member == owner.member %>
+              <a href="/owners/<%= owner.id %>/edit" class="btn btn-warning">
+                <i class="fa fa-edit"></i>
+              </a>
+              <a href="/delete_owner/<%= owner.id %>" class="btn btn-danger" rel="nofollow">
+                <i class="fa fa-trash-o"></i>
+              </a>
+            <% end %>
           </div>
         </li>
       <% end %>
