--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -20,8 +20,11 @@
         <td><%= owner.member.email %></td>
         <td>
           <a href="/owners/<%= owner.id %>" class="btn btn-primary">Show</a>
-          <a href="/owners/<%= owner.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_owner/<%= owner.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          
+          <% if current_member == owner.member %>
+            <a href="/owners/<%= owner.id %>/edit" class="btn btn-warning">Edit</a>
+            <a href="/delete_owner/<%= owner.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
