--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -17,12 +17,14 @@
       <a href="/owners" class="btn btn-primary">
         Back
       </a>
-      <a href="/owners/<%= @owner.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_owner/<%= @owner.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
+      <% if current_member == @owner.member %>
+        <a href="/owners/<%= @owner.id %>/edit" class="btn btn-warning">
+          Edit
+        </a>
+        <a href="/delete_owner/<%= @owner.id %>" class="btn btn-danger" rel="nofollow">
+          Delete
+        </a>
+      <% end %>
     </div>
   </div>
 </div>
