--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -55,6 +55,20 @@
           </div>
 
           <div class="form-group">
+            <%= f.label :name, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.text_field :name, :class => "form-control", :placeholder => "Enter name" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :family_id, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.select(:family_id, options_from_collection_for_select(Family.all, :id, :last_name, @member.family_id), {}, {:class => "form-control"}) %>
+            </div>
+          </div>
+
+          <div class="form-group">
             <div class="col-sm-10 col-sm-offset-2">
               <%= f.submit "Update", class: "btn btn-success btn-block" %>
             </div>
