Automatically associate comment to signed in user

--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -28,13 +28,7 @@
       </div>
 
       <!-- Label and input for member_id -->
-      <div class="form-group">
-        <label for="member_id" class="control-label">
-          Member
-        </label>
-
-        <%= select_tag(:member_id, options_from_collection_for_select(Member.all, :id, :email, @owner.member_id), :class => "form-control") %>
-      </div>
+      <input type="hidden" name="member_id" value="<%= current_member.id %>">
 
       <button class="btn btn-success">
         Create Owner
