--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -16,8 +16,20 @@
 
       <% @owners.each do |owner| %>
       <tr>
-        <td><%= owner.vessels.name %></td>
-        <td><%= owner.member.email %></td>
+        <td>
+          <% if owner.vessels.present? %>
+            <a href="/vessels/<%= owner.vessels.id %>">
+              <%= owner.vessels.name %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if owner.member.present? %>
+            <a href="/members/<%= owner.member.id %>">
+              <%= owner.member.email %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/owners/<%= owner.id %>" class="btn btn-primary">Show</a>
           
