--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -6,10 +6,22 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Vessels</dt>
-      <dd><%= @owner.vessels_id %></dd>
+      <dd>
+        <% if @owner.vessels.present? %>
+          <a href="/vessels/<%= @owner.vessels_id %>">
+            <%= @owner.vessels.name %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Member</dt>
-      <dd><%= @owner.member_id %></dd>
+      <dd>
+        <% if @owner.member.present? %>
+          <a href="/members/<%= @owner.member_id %>">
+            <%= @owner.member.email %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
