--- a/app/views/vessels/index.html.erb
+++ b/app/views/vessels/index.html.erb
@@ -3,6 +3,104 @@
     Vessels
     <a href="/vessels/new" class="btn btn-lg btn-success">New Vessel</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => collapse_search_form, :id => "vessels_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+    <%= f.label :name_cont, "Name contains" %>
+    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :propulsion_cont, "Propulsion contains" %>
+    <%= f.text_field :propulsion_cont, :class => "form-control", :placeholder => "Propulsion contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :country_of_origin_cont, "Country of origin contains" %>
+    <%= f.text_field :country_of_origin_cont, :class => "form-control", :placeholder => "Country of origin contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :city_cont, "City contains" %>
+    <%= f.text_field :city_cont, :class => "form-control", :placeholder => "City contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :model_cont, "Model contains" %>
+    <%= f.text_field :model_cont, :class => "form-control", :placeholder => "Model contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :construction_date_cont, "Construction date contains" %>
+    <%= f.text_field :construction_date_cont, :class => "form-control", :placeholder => "Construction date contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :brand_cont, "Brand contains" %>
+    <%= f.text_field :brand_cont, :class => "form-control", :placeholder => "Brand contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :lenght_cont, "Lenght contains" %>
+    <%= f.text_field :lenght_cont, :class => "form-control", :placeholder => "Lenght contains" %>
+  </div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        <div class="form-group">
+      <%= f.label :members_email_cont, "Member email contains" %>
+      <%= f.text_field :members_email_cont, :class => "form-control", :placeholder => "Member email contains" %>
+    </div>
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/vessels" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#vessels_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
