--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -21,13 +21,7 @@
         <td><%= member.email %></td>
         <td><%= member.password %></td>
         <td><%= member.name %></td>
-        <td>
-          <% if member.family.present? %>
-            <a href="/families/<%= member.family.id %>">
-              <%= member.family.last_name %>
-            </a>
-          <% end %>
-        </td>
+        <td><%= member.family_id %></td>
         <td>
           <a href="/members/<%= member.id %>" class="btn btn-primary">Show</a>
         </td>
