--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -15,13 +15,7 @@
       <dd><%= @member.name %></dd>
 
       <dt>Family</dt>
-      <dd>
-        <% if @member.family.present? %>
-          <a href="/families/<%= @member.family_id %>">
-            <%= @member.family.last_name %>
-          </a>
-        <% end %>
-      </dd>
+      <dd><%= @member.family_id %></dd>
 
     </dl>
 
